Agregacion de link a meta datos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Portafolio de Jorge Pérez">
   <meta property="og:description" content="Explora mis proyectos en diseño UX/UI, marketing y desarrollo web.">
   <meta property="og:image" content="https://res.cloudinary.com/dukxiqmc7/image/upload/v1731805754/seoImg_v5doot.webp">
-  <meta property="og:url" content="https://tusitio.com">
+  <meta property="og:url" content="https://jorgeperez.netlify.app/">
   <meta property="og:type" content="website">
   <link rel="icon" href="./assets/images/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="assets/stylesheet/reset.css">
